--- a/DoAn_Nhom3/LibraryManagement/LibraryManagement.csproj
+++ b/DoAn_Nhom3/LibraryManagement/LibraryManagement.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Views\Shared\Components\" />
   </ItemGroup>
 
 </Project>
