--- a/DoAn_Nhom3/LibraryManagement/LibraryManagement.csproj
+++ b/DoAn_Nhom3/LibraryManagement/LibraryManagement.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <_ContentIncludedByDefault Remove="Views\ThongKeSachs\Index.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\ThongKeSach\Index.cshtml" />
     <_ContentIncludedByDefault Remove="Views\ThongKeTienPhats\Index.cshtml" />
     <_ContentIncludedByDefault Remove="Views\SachQuaHans\Details.cshtml" />
     <_ContentIncludedByDefault Remove="Views\SachQuaHans\Index.cshtml" />
